--- a/tma/index.html
+++ b/tma/index.html
@@ -3,14 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <script src="https://telegram.org/js/telegram-web-app.js"></script>
     <title>vite-project</title>
   </head>
   <body>
-    <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
-    <script src="https://telegram.org/js/telegram-web-app.js"></script>
     <script>
-      Telegram.WebApp.expand();
+      window.Telegram.WebApp.expand();
     </script>
+    <div id="root"></div>
   </body>
 </html>
