--- a/tma/index.html
+++ b/tma/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="https://telegram.org/js/telegram-web-app.js"></script>
-    <link href="./src/index.css" rel="stylesheet">
+    <link href="./src/app/index.css" rel="stylesheet">
     <title>vite-project</title>
   </head>
   <body>
-    <script type="module" src="/src/main.tsx"></script>
+    <script type="module" src="/src/app/main.tsx"></script>
     <script>
       window.Telegram.WebApp.expand();
     </script>
